--- a/styles/style.scss
+++ b/styles/style.scss
@@ -77,6 +77,13 @@
             }
     }
 
+    img{
+        position: relative;
+        margin: 70px auto;
+        left: 50%;
+        transform: translateX(-50%);
+        
+    }
 }
 
 .about{
@@ -260,7 +267,43 @@
                                 @media (min-height:750px) {
                                     width: 513px;
                                 }
-                        }        
+                        }
+                    
+                        .images1{
+                            position: relative;
+                                p{
+                                    position: absolute;
+                                    @include RobotoSlab (15px, 18px, 400);
+                                    padding: 4px 6px;
+                                    color: $white;
+                                    background-color: $blackOpasity;
+                                    top: 10px;
+                                }
+                        }
+
+                        .images2{
+                            position: relative;
+                                p{
+                                    position: absolute;
+                                    @include RobotoSlab (15px, 18px, 400);
+                                    padding: 4px 6px;
+                                    color: $white;
+                                    background-color: $blackOpasity;
+                                    top: 10px;
+                                }
+                        }
+
+                        .images3{
+                            position: relative;
+                                p{
+                                    position: absolute;
+                                    @include RobotoSlab (15px, 18px, 400);
+                                    padding: 4px 6px;
+                                    color: $white;
+                                    background-color: $blackOpasity;
+                                    top: 10px;
+                                }
+                        }
                 }
 
                 &_btn{
